# openrag

./: Dockerfile.backend  Makefile  pyproject.toml
.github/workflows/: autofix.ci.yml  build-multiarch.yml  lint-backend.yml  operator-ci.yml  operator-release.yml  publish-mcp.yml  publish-sdk-python.yml  publish-sdk-typescript.yml  test-e2e.yml
docs/: package-lock.json  package.json
flows/: ingestion_flow.json  openrag_agent.json  openrag_nudges.json  openrag_url_mcp.json
frontend/: package-lock.json  package.json
frontend/app/api/mutations/: useConnectConnectorMutation.ts  useDeleteDocument.ts
frontend/app/api/queries/: useGetTasksQuery.ts
frontend/app/knowledge/: page.tsx
frontend/app/settings/[tab]/: page.tsx
frontend/app/settings/_components/: agent-settings-section.tsx  ingest-settings-section.tsx  settings-nav.tsx
frontend/components/: task-error-content.tsx  task-notification-menu.tsx
frontend/components/task-dialog/: constants.ts
frontend/contexts/: auth-context.tsx  task-context.tsx
frontend/lib/: knowledge-table-state.ts  task-error-display.ts  task-utils.ts  url-utils.ts
frontend/tests/core/: tasks-unified-panel.spec.ts
kubernetes/helm/openrag/templates/: serviceaccount.yaml
kubernetes/helm/operator/: values.yaml
kubernetes/operator/: Dockerfile  Makefile
kubernetes/operator/api/v1alpha1/: openrag_types.go  zz_generated.deepcopy.go
kubernetes/operator/config/crd/bases/: openr.ag_openrags.yaml
kubernetes/operator/config/default/: manager_auth_proxy_patch.yaml
kubernetes/operator/config/rbac/: role.yaml
kubernetes/operator/config/samples/: docling-complete.yaml  kind-cluster-openrag-cr.yaml  openrag_v1alpha1_openrag-with-labels-annotations.yaml  openrag_v1alpha1_openrag.yaml
kubernetes/operator/internal/controller/: deletion_handler.go  env.go  env_example_test.go  env_test.go  label_merge_test.go  openrag_controller.go  openrag_controller_env_behavior_test.go  openrag_controller_test.go  status.go
sdks/mcp/src/openrag_mcp/: __init__.py
sdks/python/: pyproject.toml
sdks/python/openrag_sdk/: __init__.py
sdks/typescript/: package-lock.json  package.json
sdks/typescript/src/: documents.ts
sdks/typescript/tests/: integration.test.ts
src/: dependencies.py  session_manager.py
src/api/: auth.py  langflow_files.py  router.py  users.py
src/api/settings/: __init__.py  endpoints.py  helpers.py  langflow_sync.py  models.py
src/api/v1/: chat.py  documents.py  knowledge_filters.py  models.py  search.py  settings.py
src/app/: container.py  factory.py  lifespan.py
src/app/routes/: internal.py
src/auth/: ibm_auth.py  jwt_roles.py
src/config/: settings.py  utils.py
src/connectors/: langflow_connector_service.py  service.py
src/connectors/google_drive/: connector.py  oauth.py
src/db/repositories/: audit_repo.py  role_repo.py
src/models/: processors.py  tasks.py
src/services/: auth_service.py  chat_service.py  default_docs_service.py  docling_polling_service.py  docling_service.py  langflow_file_service.py  task_service.py  user_service.py  workspace_config_service.py
src/utils/: file_utils.py  logging_config.py  version_utils.py
tests/integration/core/: test_mcp_url_ingest.py  test_onboarding_sample_docs.py  test_runtime_migration.py  test_startup_ingest.py
tests/integration/sdk/: conftest.py
tests/unit/: test_connector_processor_filename_dedupe.py  test_docling_polling_service.py  test_docling_service_status_check.py  test_jwt_claims_cache.py  test_langflow_file_service_two_phase.py  test_langflow_safe_filename.py  test_oauth_encryption.py  test_task_service_get_task_status2.py  test_task_service_retry_failed_files.py
tests/unit/config/: test_jwt_auth_header.py
tests/unit/connectors/: test_langflow_connector_txt_to_md.py
tests/unit/dependencies/: test_jwt_header_auth.py  test_rbac_kill_switch.py  test_require_api_key_permission.py  test_require_permission.py
tests/unit/services/: test_bootstrap_race.py  test_jwt_roles.py  test_rbac_service.py  test_user_service_bootstrap.py  test_user_service_jwt_roles.py
